--- a/Project1.dproj
+++ b/Project1.dproj
@@ -82,14 +82,17 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="MainWindow.pas">
-            <Form>Form1</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
         <DCCReference Include="DataBaseHelper.pas"/>
         <DCCReference Include="EtapZlecenia.pas"/>
+        <DCCReference Include="Harmonogramator.pas"/>
+        <DCCReference Include="MainWindow.pas">
+            <Form>Form1</Form>
+        </DCCReference>
         <DCCReference Include="QueryHelper.pas"/>
-        <DCCReference Include="EtapyZlecen.pas"/>
+        <DCCReference Include="Stanowiska.pas"/>
+        <DCCReference Include="Stanowisko.pas"/>
+        <DCCReference Include="Zlecenia.pas"/>
+        <DCCReference Include="Zlecenie.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
