--- a/Project1.dproj
+++ b/Project1.dproj
@@ -94,6 +94,7 @@
         <DCCReference Include="Zlecenia.pas"/>
         <DCCReference Include="Zlecenie.pas"/>
         <DCCReference Include="ZlecenieDane.pas"/>
+        <DCCReference Include="CzasHelper.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
