--- a/Project1.dproj
+++ b/Project1.dproj
@@ -95,6 +95,7 @@
         <DCCReference Include="Zlecenie.pas"/>
         <DCCReference Include="ZlecenieDane.pas"/>
         <DCCReference Include="CzasHelper.pas"/>
+        <DCCReference Include="KolorHelper.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
