--- a/Project1.dproj
+++ b/Project1.dproj
@@ -97,6 +97,15 @@
         <DCCReference Include="CzasHelper.pas"/>
         <DCCReference Include="KolorHelper.pas"/>
         <DCCReference Include="Etapy.pas"/>
+        <DCCReference Include="DyspozytorskaRegulaHarmonogramowania.pas"/>
+        <DCCReference Include="DyspozytorskaRegulaHarmonogramowaniaSPT.pas"/>
+        <DCCReference Include="DyspozytorskaRegulaHarmonogramowaniaEDD.pas"/>
+        <DCCReference Include="DyspozytorskaRegulaHarmonogramowaniaMDD.pas"/>
+        <DCCReference Include="DyspozytorskaRegulaHarmonogramowaniaMST.pas"/>
+        <DCCReference Include="DyspozytorskaRegulaHarmonogramowaniaSCR.pas"/>
+        <DCCReference Include="DyspozytorskaRegulaHarmonogramowaniaAOPN.pas"/>
+        <DCCReference Include="DyspozytorskaRegulaHarmonogramowaniaSOPN.pas"/>
+        <DCCReference Include="DyspozytorskaRegulaHarmonogramowania1ST.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
